--- a/index.html
+++ b/index.html
@@ -11,30 +11,29 @@
 
 <body>
     <main class="container">
+        
         <header>
             <div class="img-container">
                 <img src="img/brett-meliti-RgkYMfFopIA-unsplash-removebg-preview.png" alt="Fossil">
             </div>
-            <h1>Fossiljägaren</h1>
-            <p>Med entusiasm och bara händer ger du dig ut i jakten på fossil till ditt museum.</p>
-            <p>Värva hjälpredor och gräv dig till nya upptäckter.</p>
-            <p>Hur många besökare kan du få?</p>
+            <h1>Mlg clicker</h1>
+            <p>Det här är Mlg clicker och ditt job är att få så mycket Hitmarkers som du kan:)</p>
         </header>
         <section class="game">
             <div class="game-hud">
                 <ul class="game-currency">
                     <li class="item">
-                        <h1>Benbitar: <span id="money"></span></h1>
+                        <h1>Hitmarkers: <span id="money"></span></h1>
                     </li>
                     <li class="item">
-                        <h1>Soparskills: <span id="mps"></span></h1>
+                        <h1>Doritos: <span id="mps"></span></h1>
                     </li>
                     <li class="item">
-                        <h1>Besökare: <span id="mpc"></span></h1>
+                        <h1>Doge: <span id="mpc"></span></h1>
                     </li>
                 </ul>
                 <div class="game-button">
-                    <button id="click">Sopa</button>
+                    <button id="click">Weed</button>
                 </div>
             </div>
             <div class="w-100">
