--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Clicker exempel</title>
+    <title>Mlg clicker</title>
 </head>
 
 <body>
     <main class="container">
-        
+       <body style="background-color:rgb(74, 192, 119);"></body> 
         <header>
             <div class="img-container">
-                <img src="img/brett-meliti-RgkYMfFopIA-unsplash-removebg-preview.png" alt="Fossil">
+                <img src="img/nedladdning.jpg" alt="grej">
             </div>
             <h1>Mlg clicker</h1>
-            <p>Det här är Mlg clicker och ditt job är att få så mycket Hitmarkers som du kan:)</p>
+            <p>Det här är Mlg clicker och ditt job är att få så mycket Hitmarkers som du kan :)</p>
         </header>
         <section class="game">
             <div class="game-hud">
@@ -26,14 +26,14 @@
                         <h1>Hitmarkers: <span id="money"></span></h1>
                     </li>
                     <li class="item">
-                        <h1>Doritos: <span id="mps"></span></h1>
+                        <h1>Hiitmarkers per sek: <span id="mps"></span></h1>
                     </li>
                     <li class="item">
-                        <h1>Doge: <span id="mpc"></span></h1>
+                        <h1>Hitmarkers per click: <span id="mpc"></span></h1>
                     </li>
                 </ul>
                 <div class="game-button">
-                    <button id="click">Weed</button>
+                    <button id="click"><type="button"> <img src="img/weed.jpg" height ="123" width="165" /></button></button>
                 </div>
             </div>
             <div class="w-100">
