--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="sv">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,15 +7,15 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Mlg clicker</title>
 </head>
-
 <body>
     <main class="container">
        <body style="background-color:rgb(74, 192, 119);"></body> 
         <header>
-            <div class="img-container">
-                <img src="img/nedladdning.jpg" alt="grej">
+            <div class="img-container" div>
+                <img src="img/bild.jpg"class="bild" alt="grej">
             </div>
-            <h1>Mlg clicker</h1>
+            
+            <h1> Mlg clicker <h1>
             <p>Det här är Mlg clicker och ditt job är att få så mycket Hitmarkers som du kan :)</p>
         </header>
         <section class="game">
@@ -26,15 +25,18 @@
                         <h1>Hitmarkers: <span id="money"></span></h1>
                     </li>
                     <li class="item">
-                        <h1>Hiitmarkers per sek: <span id="mps"></span></h1>
+                        <h1>Hitmarkers per sek: <span id="mps"></span></h1>
                     </li>
                     <li class="item">
                         <h1>Hitmarkers per click: <span id="mpc"></span></h1>
                     </li>
                 </ul>
                 <div class="game-button">
-                    <button id="click"><type="button"> <img src="img/weed.jpg" height ="123" width="165" /></button></button>
-                </div>
+                    <button id="click"><type="button"> <img src="img/Hitmarker.png" height ="123" width="145" ></button></button>
+                    <img src="img/Sanic.webp" height ="100" width="120" class="center">
+                    <img src="img/nedladdning.jpg"class="bild2">
+                    <img src="img/quickscope.jpg"class="bild3"
+                div>
             </div>
             <div class="w-100">
                 <h1>Uppgraderingar</h1>
